# compiler-notes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
IR/analysis/data/: llvm_use_class_implementation.md
codegen/datatype/: fp128.md
codegen/loops/: detection.md
cuda/: CMakeLists.txt
cuda/src/: shared.cu
debugger/doc/: ptrace.md
debugger/ptrace/: CMakeLists.txt  attach.c  error_handling.h  fork.c  ptrace_helper.h
dominators/: CMakeLists.txt
dominators/test/: CMakeLists.txt  DominatorTest.cpp
elf/: aarch64.md
elf/dynamic_linking/: from_execve_to_main.md  scoped_symbol_resolution.md  symbol_binding_and_visibility.md  symbol_versioning.md
elf/dynamic_linking/img/: add_scope.dot  global_scope_after.dot  global_scope_before.dot  premote_to_global.dot
elf/dynamic_linking/src/dlopen/: Makefile  api.c  api.h  bar.c  dlclose.c  dlopen_promotion.c  foo.c  main.c  switch_main_module.c  test.c  util.c  util.h
elf/dynamic_linking/src/symbol/archive/: Makefile  api.h  greet.c  main.c  println.c  strong.c
elf/dynamic_linking/src/symbol/conflict/: Makefile  main.c
elf/dynamic_linking/src/symbol/interposition/: Makefile  impl1.c  main.c
elf/dynamic_linking/src/symbol/local/: Makefile  api.c  api.h  main.c
elf/dynamic_linking/src/symbol/undefined/: Makefile  api.h  main.c  strong.c  weak.c
elf/dynamic_linking/src/symbol/weak/: Makefile  api.h  impl_strong.c  impl_weak1.c
graphs/: CMakeLists.txt
graphs/include/: DFS.h  Dominator.h  Graph.h  SCC.h  Utils.h
graphs/src/: Dominator.cpp  Graph.cpp  SCC.cpp
graphs/test/: CMakeLists.txt  DFSTest.cpp  DominatorTest.cpp  GraphTest.cpp  SCCTest.cpp
llvm_code_example/: CMakeLists.txt  README.md
llvm_code_example/src/: Driver.cpp  Hello.cpp  LiveVariableAnalysis.cpp  LiveVariableAnalysis.h  Loop.cpp  Loop.h  SCCP.cpp  SCCP.h
llvm_code_example/test/: livevar.ll  loop.cpp  loop.ll  zlib_inffast.ll
rocm/: CMakeLists.txt
rocm/src/: mat_mul.hip  shared.hip
tools/: managed_static.md
